--- a/core/templates/core/manager_delete_pet.html
+++ b/core/templates/core/manager_delete_pet.html
@@ -82,6 +82,7 @@
 {% endblock %}
 
 {% block extra_js %}
+<script src="{% static 'core/js/ui-components.js' %}"></script>
 <script>
     function confirmDelete() {
         return confirm(
